--- a/public/chat.html
+++ b/public/chat.html
@@ -4,61 +4,59 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Chat App</title>
 </head>
 <body>
 
-  <div class="columns">
-    <div class="column is-one-quarter">
-    </div>
+  <section class="section">
+    <div class="container">
+      <div class="tile is-ancestor">
 
-    <div class="column">
-      <!-- This is where the messages and location links will show -->
-      <section class="section">
-        <div id="messages"></div>
-        <div id="location"></div>
-      </section>
-
-      <!-- This is where the user types in the message-->
-      <section class="section">
-        <div class="container">
-          <form id="message-form">
-            <div class="field is-grouped">
-              <p class="control">
-                <input id="send-input" class="input" name="message" type="text" autocomplete="off" placeholder="Message" required>
-              </p>
-              <p class="control">
-                <button id="send-btn" class="button is-info">
-                  Send
-                </button>
-              </p>
-              <p class="control">
-                <a id="dummy-location" class="button is-info">
-                  Share Location
-                </a>
-              </p>
-            </div>
-          </form>
+        <div class="tile is-3 is-parent">
+          <div class="tile is-child notification is-dark">
+            <p class="title">Chatroom</p>
+          </div>
         </div>
-      </section>
+
+        <div class="tile is-9 is-parent is-vertical">
+
+          <div class="tile is-child notification is-light">
+            <div id="messages"></div>
+            <div id="location"></div>
+          </div>
+
+          <div class="tile is-child">
+            <form id="message-form">
+              <div class="field is-grouped">
+                <div class="control is-expanded">
+                  <input id="send-input" class="input" name="message" type="text" placeholder="Write message">
+                </div>
+                <div class="control">
+                  <button id="send-btn" type="submit" class="button is-primary">Send</button>
+                </div>
+                <div class="control">
+                  <button id="dummy-location" type="submit" class="button is-primary" name="button">Share Location</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
   <!-- Below are the Mustache 'template' scripts that are required to render the textfrom chat.js -->
   <script id="message-template" type="text/html">
-    <div class="container">
-      <span>{{username}}</span>
-      <span>{{createdAt}}</span>
+      <span class="has-text-weight-semibold is-capitalized">{{username}}</span>
+      <span class="tag">{{createdAt}}</span>
       <p>{{message}}</p>
-    </div>
   </script>
 
   <script id="location-template" type="text/html">
-    <div class="container">
       <span>{{username}}</span>
       <span>{{createdAt}}</span>
       <p><a href="{{url}}" target=_blank>{{text}}</a></p>
-    </div>
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
