--- a/public/chat.html
+++ b/public/chat.html
@@ -11,16 +11,14 @@
 
   <section class="section">
     <div class="container">
-      <div class="tile is-ancestor">
-
+      <div class="tile is-ancestor this-one">
         <div class="tile is-3 is-parent">
           <div class="tile is-child notification is-dark">
-            <p class="title">Chatroom</p>
+            <div id="participants"></div>
           </div>
         </div>
 
         <div class="tile is-9 is-parent is-vertical">
-
           <div class="tile is-child notification is-light">
             <div id="messages"></div>
             <div id="location"></div>
@@ -30,13 +28,13 @@
             <form id="message-form">
               <div class="field is-grouped">
                 <div class="control is-expanded">
-                  <input id="send-input" class="input" name="message" type="text" placeholder="Write message">
+                  <input id="send-input" class="input" name="message" type="text" placeholder="Write message" required autocomplete="off">
                 </div>
                 <div class="control">
                   <button id="send-btn" type="submit" class="button is-primary">Send</button>
                 </div>
                 <div class="control">
-                  <button id="dummy-location" type="submit" class="button is-primary" name="button">Share Location</button>
+                  <a id="dummy-location" class="button is-primary" name="button">Share Location</a>
                 </div>
               </div>
             </form>
@@ -46,17 +44,31 @@
     </div>
   </section>
 
-  <!-- Below are the Mustache 'template' scripts that are required to render the textfrom chat.js -->
+  <!--
+    Below are the Mustache 'template' scripts that are required to render the textfrom chat.js
+    Probably a good idea to refactor and put these in a different JS file for clarity
+  -->
   <script id="message-template" type="text/html">
+    <div class="mb-1">
       <span class="has-text-weight-semibold is-capitalized">{{username}}</span>
       <span class="tag">{{createdAt}}</span>
       <p>{{message}}</p>
+    </div>
   </script>
 
   <script id="location-template" type="text/html">
-      <span>{{username}}</span>
-      <span>{{createdAt}}</span>
-      <p><a href="{{url}}" target=_blank>{{text}}</a></p>
+    <span class="has-text-weight-semibold is-capitalized">{{username}}</span>
+    <span class="tag">{{createdAt}}</span>
+    <p><a href="{{url}}" target=_blank>{{text}}</a></p>
+  </script>
+
+  <script id="participantList-template" type="text/html">
+    <h3 class="title is-capitalized">{{room}}</h3>
+    <ul>
+      {{#participants}}
+      <li class="is-capitalized is-size-6">{{username}}</li>
+      {{/participants}}
+    </ul>
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
